# ros_robotics_projects

chapter_2_codes/: README.txt
chapter_2_codes/face_tracker_pkg/: CMakeLists.txt
chapter_2_codes/face_tracker_pkg/config/: track.yaml
